@@ -15,6 +15,8 @@ FIXES
 
  * ReferenceFields store load errors while sending not resolved CQL strings
 
+ * ActivitySubsetId workflow metadata doesn't typo
+
 
 
 
